--- a/rails_app/app/views/layouts/application.html.slim
+++ b/rails_app/app/views/layouts/application.html.slim
@@ -8,5 +8,6 @@ html
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   body
+    = render 'layouts/header'
     = yield
-    = yield :footer
+    = render 'layouts/footer'
